# Conviot_Middleware

./: .gitignore  Install_Prerequisite.sh  IoT_install.sh  Makefile.am  README.md  configure.ac  preinstall.sh
m4config/: acx_lib_json_c.m4  acx_lib_pahomqtt.m4  ax_lib_sqlite3.m4
src/common/: Json_common.c  MQTT_common.c  Makefile  Makefile.am
src/common/capcommon/: CAPBase64.c  CAPFile.c  CAPHash.c  CAPKeyValue.c  CAPLinkedList.c  CAPLogger.c  CAPProcess.c  CAPQueue.c  CAPSocket.c  CAPStack.c  CAPString.c  CAPThread.c  CAPThreadEvent.c  CAPThreadLock.c  CAPTime.c  Makefile  Makefile.am
src/include/: Json_common.h  MQTT_common.h  capiot_common.h
src/include/capcommon/: CAPBase64.h  CAPHash.h  CAPLinkedList.h  CAPLogger.h  CAPQueue.h  CAPSocket.h  CAPStack.h  CAPString.h  CAPThreadEvent.h  CAPTime.h  cap_common.h
src/middleware/: AppManager.c  AppManager.h  CentralManager.c  CentralManager.h  ConviotMiddleware.c  DBHandler.c  DBHandler.h  InfoManager.c  InfoManager.h  Inittest.sh  MQTTMessageHandler.c  MQTTMessageHandler.h  Makefile  Makefile.am  TestCase.sh  ThingManager.c  ThingManager.h  middleware_config.cfg
src/middleware/temp/: AppEngine.c  AppEngine.h  AppManager.c  AppManager.h  AppRunner.c  AppRunner.h  AppScriptModeler.c  AppScriptModeler.h  AppScriptParser.c  AppScriptParser.h  AppScriptScanner.c  AppScriptScanner.h  AppValueCache.c  AppValueCache.h  CAPIoTMiddleware.c  CentralManager.c  CentralManager.h  ClientManager.c  ClientManager.h  DBHandler.c  DBHandler.h  InfoManager.c  InfoManager.h  MQTTMessageHandler.c  ThingHandler.c  ThingHandler.h  ThingManager.c  ThingManager.h
test/: AliveTest.sh  RegisterTest.sh  SendVariableTest.sh  UnregisterTest.sh
