noinst_LIBRARIES = libcapcommon.a
libcapcommon_a_SOURCES = CAPLinkedList.c\
					CAPStack.c\
					CAPThreadEvent.c\
					CAPThread.c\
					CAPString.c\
					CAPThreadLock.c\
					CAPHash.c\
					CAPTime.c\
					CAPFile.c\
					CAPSocket.c\
					CAPLogger.c\
					CAPQueue.c\
					CAPKeyValue.c\
					CAPProcess.c\
					CAPBase64.c

libcapcommon_a_CFLAGS = -I../../include/capcommon
libcapcommon_a_LIBADD = $(PTHREAD_LIBS)
